--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "homepage": "https://github.com/LydiaTsami/SightPlusPlus#readme",
   "devDependencies": {
     "dotenv": "^10.0.0",
+    "eslint": "^7.30.0",
+    "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.9"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "dotnet": "^1.1.4",
     "express": "^4.17.1",
     "mongoose": "^5.13.2"
