Added searches for  records based on the floor
- Search using floor
- Search using targetId and floor
- Added local deviceTable
- Added scheduler to update local deviceTable from MongoDb

--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/LydiaTsami/SightPlusPlus.git"
+    "url": "git+https://github.com/UCL-SightPlusPlus/SightPlusPlus-LocationServer.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/LydiaTsami/SightPlusPlus/issues"
+    "url": "https://github.com/UCL-SightPlusPlus/SightPlusPlus-LocationServer/issues"
   },
-  "homepage": "https://github.com/LydiaTsami/SightPlusPlus#readme",
+  "homepage": "https://github.com/UCL-SightPlusPlus/SightPlusPlus-LocationServer#readme",
   "devDependencies": {
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.9"
@@ -23,6 +23,7 @@
   "dependencies": {
     "dotnet": "^1.1.4",
     "express": "^4.17.1",
-    "mongoose": "^5.13.2"
+    "mongoose": "^5.13.2",
+    "node-cron": "^3.0.0"
   }
 }
