--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,6 +34,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: sudo docker run --name mongo -d -p 27017:27017 mongo
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
