--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,9 +39,6 @@ jobs:
     - run: npm run build --if-present
     - name: Run API and tests
       run: |
-        npm start &
+        npm test &
         sleep 2
-        cd unit-test
-        node deviceControllerTest.js
-        node recordControllerTest.js
         kill -9 `lsof -i:3000 -t`
