--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "UCL's Sight++ v3 project .",
   "main": "index.js",
   "scripts": {
-    "test": "node ./unit-test/deviceControllerTest.js && node ./unit-test/recordControllerTest.js"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,11 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "dotnet": "^1.1.4",
     "express": "^4.17.1",
+    "mocha": "^9.0.2",
     "mongoose": "^5.13.2"
   }
 }
