--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "UCL's Sight++ v3 project .",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "mocha --exit"
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,12 @@
     "nodemon": "^2.0.9"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "dotnet": "^1.1.4",
     "express": "^4.17.1",
+    "mocha": "^9.0.2",
     "mongoose": "^5.13.2"
   }
 }
