--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "dotenv": "^10.0.0",
     "eslint": "^7.30.0",
     "eslint-config-google": "^0.14.0",
-    "nodemon": "^2.0.9",
-    "nyc": "^15.1.0"
+    "nodemon": "^2.0.9"
   },
   "dependencies": {
     "axios": "^0.21.1",
