Updated github workflow to work with the scheduler

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
         echo DATABASE_NAME=SightPlusPlus >> .env
         echo UDP_SERVER_HOST=localhost >> .env
         echo UDP_PORT=7979 >> .env
-        echo DEVICE_CRON=0 * * * * >> .env
+        echo DEVICE_CRON="0 * * * *" >> .env
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
