Feature/record search with floor (#6)
* Added searches for  records based on the floor

- Search using floor
- Search using targetId and floor
- Added local deviceTable
- Added scheduler to update local deviceTable from MongoDb

* Updated README & github workflow

* Updated package-lock.json

* Added comments

* Run ESLint on recordSearchWithFloor changes

* Changed targetId to recordType

* Added tests for record searched with floor

* removed nyc from dependencies

* Updated package-lock.json

* Updated package-lock.json

* Testing cron scheduler

* Revert "Updated package-lock.json"

This reverts commit b0d4611b7c370c009e432df7077760de72e5329f.

* Updated github workflow to work with the scheduler

--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/LydiaTsami/SightPlusPlus.git"
+    "url": "git+https://github.com/UCL-SightPlusPlus/SightPlusPlus-LocationServer.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/LydiaTsami/SightPlusPlus/issues"
+    "url": "https://github.com/UCL-SightPlusPlus/SightPlusPlus-LocationServer/issues"
   },
-  "homepage": "https://github.com/LydiaTsami/SightPlusPlus#readme",
+  "homepage": "https://github.com/UCL-SightPlusPlus/SightPlusPlus-LocationServer#readme",
   "devDependencies": {
     "dotenv": "^10.0.0",
     "eslint": "^7.30.0",
@@ -28,6 +28,7 @@
     "chai-http": "^4.3.0",
     "dotnet": "^1.1.4",
     "express": "^4.17.1",
+    "node-cron": "^3.0.0",
     "mocha": "^9.0.2",
     "mongoose": "^5.13.2"
   }
