Feature/get sentences by beacon (#17)
* Added get latest record by beacon id and translate to sentences

* Added unit tests for get records by beacon

* Fixed tests failing

-Changed targetId to recordType
-Changed forEach creation in tests because parallel requests using chai were breaking the tcp connection

* Added comments to check test errors

* Added console logs for debugging purposes

* Updated recordControllerTest

* Added option to npm test

* Moved the creation of camera in recordControllerTest

* Removed console logs

* Added promises to the creation of new devices for recordControllerTest

* Removed console logs from recordControllerTest

Co-authored-by: Lydia Tsami <lydia.tsami@gmail.com>

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "UCL's Sight++ v3 project .",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "mocha --exit"
   },
   "repository": {
@@ -20,7 +21,7 @@
     "dotenv": "^10.0.0",
     "eslint": "^7.30.0",
     "eslint-config-google": "^0.14.0",
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.12"
   },
   "dependencies": {
     "axios": "^0.21.1",
