--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/UCL-SightPlusPlus/SightPlusPlus-LocationServer#readme",
   "devDependencies": {
+    "@azure/cognitiveservices-qnamaker": "^3.2.0",
+    "@azure/cognitiveservices-qnamaker-runtime": "^1.0.1",
+    "@azure/ms-rest-js": "^2.5.3",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
