--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,6 +22,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Create env file
+      with:
+        KB_HOST: ${{secrets.KB_HOST}}
+        KB_ENDPOINT_KEY: ${{secrets.KB_ENDPOINT_KEY}}
+        KB_ID: ${{secrets.KB_ID}}
       run: |
         touch .env
         echo DATABASE_HOST=localhost >> .env
@@ -30,6 +34,9 @@ jobs:
         echo UDP_SERVER_HOST=localhost >> .env
         echo UDP_PORT=7979 >> .env
         echo DEVICE_CRON="0 * * * *" >> .env
+        echo "KB_HOST=$KB_HOST" >> .env
+        echo "KB_ENDPOINT_KEY=$KB_ENDPOINT_KEY" >> .env
+        echo "KB_ID=$KB_ID" >> .env
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
