--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,7 @@ jobs:
         echo "KB_HOST=$KB_HOST" >> .env
         echo "KB_ENDPOINT_KEY=$KB_ENDPOINT_KEY" >> .env
         echo "KB_ID=$KB_ID" >> .env
-      with:
+      env:
         KB_HOST: ${{secrets.KB_HOST}}
         KB_ENDPOINT_KEY: ${{secrets.KB_ENDPOINT_KEY}}
         KB_ID: ${{secrets.KB_ID}}
