--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ env:
   AZURE_WEBAPP_NAME: sightPlusPlus-location   # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '14.x'                # set this to the node version to use
-  DATABASE_HOST: localhost
+  DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
   DATABASE_PORT: 27017
   DATABASE_NAME: SightPlusPlus
   UDP_SERVER_HOST: localhost
@@ -34,13 +34,12 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: npm install, build, and test
+      - name: npm install, build
         run: |
           # Build and test the project, then
           # deploy to Azure Web App.
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: 'Deploy to Azure WebApp'
         uses: azure/webapps-deploy@v2
