--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,8 +17,11 @@ env:
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '14.x'                # set this to the node version to use
   DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
-  DATABASE_PORT: 27017
+  DATABASE_PORT: ${{ secrets.DATABASE_PORT }}
   DATABASE_NAME: SightPlusPlus
+  DATABASE_USER: ${{ secrets.DATABASE_USER }}
+  DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+  DATABASE_SSL: ${{ secrets.DATABASE_SSL }}
   PORT: 443
   UDP_SERVER_HOST: localhost
   UDP_PORT: 7979
