Feature/deployment on azure (#24)
* Added more Unit tests for the Device API

* Updated workflow for deployment on Azure

* Removed tests

* Added port on publish.yml

* Updated port, changed nodemon to node in package.json

* Run publish on merge request for testing purposes

* Added connection to db with user and password

* Added db user and password to publish.yml

* Tried removing port setting, updated cron setting

* Updated cron expression for azure deployment

* Deleted publish.yml , updated docker-compose.yml

* Updated device model

* Updated sensor to BLE on tests

* Removed unnecessary changes made for deployment on Azure

* Changed docker-compose .env file

* Optimized server & run benchmarks

* Adding script for automatic creation of .env file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,12 @@ version: '3.4'
 
 services:
   sightplusplus:
-    image: sightplusplus
+    image: locationserver.azurecr.io/sightplusplus
     restart: always
     build:
       context: .
       dockerfile: ./Dockerfile
     env_file: ./.env
-      # args:
-      #   - DATABASE_HOST=localhost
-      #   - DATABASE_PORT=27017
-      #   - DATABASE_NAME=SightPlusPlus
-      #   - PORT=8080
-      #   - UDP_SERVER_HOST=localhost
-      #   - UDP_PORT=7979
-      #   - DEVICE_CRON='0 * * * *'
-      #   - CLEAR_DB=true
-      #   - KB_HOST=https://gosh-bot.azurewebsites.net
-      #   - KB_ENDPOINT_KEY=15a397e6-5775-4c42-8562-a040fbb090a9
-      #   - KB_ID=49a7fbf8-3d53-45ab-ac14-0a4fafb505f5
     environment:
       NODE_ENV: production
     ports:
@@ -30,7 +18,5 @@ services:
   mongo:
     container_name: mongo
     image: mongo
-    volumes:
-      - ./data:/data/db
     ports:
       - "27017:27017"
