--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "chai-http": "^4.3.0",
     "dotnet": "^1.1.4",
     "express": "^4.17.1",
-    "node-cron": "^3.0.0",
+    "keyword-extractor": "0.0.20",
     "mocha": "^9.0.2",
-    "mongoose": "^5.13.2"
+    "mongoose": "^5.13.2",
+    "node-cron": "^3.0.0"
   }
 }
