--- a/scripts/template.env
+++ b/scripts/template.env
@@ -1,14 +1,16 @@
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_NAME=
+DATABASE_HOST= mongo
+DATABASE_PORT=27017
+DATABASE_NAME=SightPlusPlus
 DATABASE_USER=
 DATABASE_PASSWORD=
 
-PORT=8080
+SSL=
+
+REST_PORT=
 
 UDP_SERVER_HOST=localhost
-UDP_PORT=7979
-DEVICE_CRON=0 * * * *
+UDP_PORT=
+DEVICE_CRON=* * * * *
 
 KB_HOST=
 KB_ENDPOINT_KEY=
