--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "mocha --exit"
+    "test": "mocha --exit",
+    "test-with-coverage": "nyc --reporter=text mocha --exit"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,8 @@
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "nyc": "^15.1.0"
   },
   "dependencies": {
     "axios": "^0.21.1",
