Updated scripts for new org server updates

--- a/scripts/template.env
+++ b/scripts/template.env
@@ -1,4 +1,4 @@
-DATABASE_HOST= mongo
+DATABASE_HOST=mongo
 DATABASE_PORT=27017
 DATABASE_NAME=SightPlusPlus
 DATABASE_USER=
@@ -6,7 +6,11 @@ DATABASE_PASSWORD=
 
 SSL=
 
+ORG_HOST=
+ORG_PORT=
+
 REST_PORT=
+SITE=
 
 UDP_SERVER_HOST=localhost
 UDP_PORT=
