Updated UDP connection and configuration script

--- a/scripts/template.env
+++ b/scripts/template.env
@@ -9,11 +9,11 @@ SSL=
 ORG_HOST=
 ORG_PORT=
 
-REST_PORT=
+REST_PORT=9999
 SITE=
 
 UDP_SERVER_HOST=localhost
-UDP_PORT=
+UDP_PORT=9999
 DEVICE_CRON=* * * * *
 
 KB_HOST=
