Feature/send devices (#28)
* Added more Unit tests for the Device API

* Initialization of send devices to org server

* Updated scripts for new org server updates

* Added JSDoc documentation

* Fixed reply from qna chatbot if bluetooth beacon is -1

* Added more documentation

* Added more timeout for QnA test call

* Updated UDP connection and configuration script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "mocha --exit"
+    "test": "mocha --exit",
+    "test-with-coverage": "nyc --reporter=text mocha --exit",
+    "doc": "jsdoc -c jsdoc-config.json"
   },
   "repository": {
     "type": "git",
@@ -24,7 +26,9 @@
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
-    "nodemon": "^2.0.12"
+    "jsdoc": "^3.6.7",
+    "nodemon": "^2.0.12",
+    "nyc": "^15.1.0"
   },
   "dependencies": {
     "axios": "^0.21.1",
