--- a/scripts/template.env
+++ b/scripts/template.env
@@ -1,4 +1,4 @@
-DATABASE_HOST= mongo
+DATABASE_HOST=mongo
 DATABASE_PORT=27017
 DATABASE_NAME=SightPlusPlus
 DATABASE_USER=
@@ -6,10 +6,14 @@ DATABASE_PASSWORD=
 
 SSL=
 
-REST_PORT=
+ORG_HOST=
+ORG_PORT=
+
+REST_PORT=9999
+SITE=
 
 UDP_SERVER_HOST=localhost
-UDP_PORT=
+UDP_PORT=9999
 DEVICE_CRON=* * * * *
 
 KB_HOST=
