--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
     "jsdoc": "^3.6.7",
+    "nock": "^13.1.3",
     "nodemon": "^2.0.12",
     "nyc": "^15.1.0"
   },
