--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -1,8 +1,8 @@
 version: '3.4'
 
 services:
-  sightplusplus:
-    image: sightplusplus
+  avina:
+    image: avina
     build:
       context: .
       dockerfile: ./Dockerfile
